2015-01-21  Eric Botcazou  <ebotcazou@adacore.com>

	* configure.host: Add Visium support.
	* libc/machine/configure.in: Likewise.
	* libc/machine/configure: Regenerate.
	* libc/machine/visium/: New directory.
	* libc/include/machine/setjmp.h (_JBLEN): Define for Visium.
	* libc/include/machine/ieeefp.h (__IEEE_BIG_ENDIAN): Likewise.
	* libc/include/machine/time.h (_CLOCKS_PER_SEC_): Likewise.

2015-01-20  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* libc/sys/configure.in: Add OpenRISC.
	* libc/sys/configure: Regenerate.

2015-01-20  Wilco Dijkstra  <wdijkstr@arm.com>

	* libc/machine/aarch64/strlen.S (strlen): Improve performance.

2015-01-20  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* configure.host: Add extra system for OpenRISC baremetal.

2015-01-14  Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/sys/unistd.h [__BSD_VISIBLE]: Add issetugid() prototype.

2015-01-14  Joel Sherrill <joel.sherrill@oarcorp.com>

	* doc/makedoc.c: Use uintptr_t to avoid int/pointer size warnings

2015-01-14  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* configure.host: Add extra system for OpenRISC baremetal
	* libc/include/sys/config.h: Dynamic reentrancy for or1k sys targets
	* libc/sys/or1k/: New system for or1k baremetal
	* libc/sys/or1k/Makefile.am: New file
	* libc/sys/or1k/Makefile.in: New file
	* libc/sys/or1k/aclocal.m4: New file
	* libc/sys/or1k/configure.in: New file
	* libc/sys/or1k/configure: New file
	* libc/sys/or1k/getreent.S: New file
	* libc/sys/or1k/mlock.S: New file
	* libc/sys/or1k/or1k-asm.S: New file

2015-01-12  Renlin Li  <renlin.li@arm.com>

	* testsuite/newlib.wctype/tiswctype.c (main): Use wide character type
	function.

2015-01-08  Corinna Vinschen  <vinschen@redhat.com>

	* libc/time/strftime.c (__strftime): Utilize __TM_GMTOFF and __TM_ZONE
	on systems where available.  On Cygwin, call function to get values.
	Add comment to explain why.  Drop TZ_LOCK/TZ_UNLOCK in 'z' case since