@@ -1,3 +1,7 @@
+2015-01-22  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>
+
+	* libc/sys/or1k/mlock.c: Fix dependency on libgloss.
+
 2015-01-21  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* configure.host: Add Visium support.
